syntax = "proto3";

option csharp_namespace = "Proto.Requests.AiSettings";

message GetAiSettingsRequestProto {
}

message AiSettingExistsRequestProto {
}

message AiSettingsProto {
  string ai_settings_id = 1;
  string language_model_path = 2;
  string prompt = 3;
}

message AiSettingExistsResponseProto {
  bool exists = 1;
}

service AiSettingsRequestService {
  rpc GetAiSettings(GetAiSettingsRequestProto) returns (AiSettingsProto);
  rpc AiSettingsExists(AiSettingExistsRequestProto) returns (AiSettingExistsResponseProto);
}